@@ -1,6 +1,13 @@
 setnewwinprops (0.7) unstable; urgency=medium
 
-  * l
+  * daemon actions:
+    - start
+    - stop
+    - reload
+  * process management:
+    - take care of terminate children process when related windows
+    are closed.
+    - finish waiting for focus when the window is closed.
 
  -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 24 Sep 2022 11:56:56 +0200
 
